untill problem statement2 by Azhar k

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
 
     <!--Text color for tabs-->
     <color name="tab_Default_color">#A8A19E</color>>
+    <color name="def_background">#663B2E</color>
 </resources>
