--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -49,6 +49,7 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/image_play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
